--- a/config/webpacker.yml
+++ b/config/webpacker.yml
@@ -2,7 +2,7 @@
 
 default: &default
   source_path: app/javascript
-  source_entry_path: packs
+  source_entry_path: src
   public_output_path: packs
   cache_path: tmp/cache/webpacker
 
