--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "honeybadger-rails-webpacker-example",
   "private": true,
   "dependencies": {
+    "@honeybadger-io/webpack": "^1.0.3",
     "@rails/webpacker": "^3.0.2",
+    "babel-cli": "^6.26.0",
     "coffeescript": "1.12.7"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.9.3"
+    "webpack-dev-server": "^2.9.4"
   }
 }
